src/audit/snapshots/bletchmame__audit__tests__assets_from_machine_config@phony_withbios_alpha.snap
---
source: src/audit/mod.rs
expression: assets
---
[
    Asset {
        kind: Rom,
        name: "alpha.bin",
        size: Some(
            32768,
        ),
        location: MachinePaths(
            [
                "phony_withbios_alpha",
                "phony_withbios",
            ],
        ),
        asset_hash: CRC(1faf9fdb) SHA1(d27909184ee9170707c1be9a4cfbe83b359672e1),
        status: Good,
        is_optional: false,
    },
]
