src/audit/snapshots/bletchmame__audit__tests__assets_from_machine_config_and_software@bbcm_click100.snap
---
source: src/audit/mod.rs
expression: assets
---
[
    Asset {
        kind: Rom,
        name: "mos320.ic24",
        size: Some(
            131072,
        ),
        location: Paths {
            software_list_name: None,
            targets: [
                "bbcm",
            ],
        },
        asset_hash: CRC(0f747ebe) SHA1(eacacbec3892dc4809ad5800e6c8299ff9eb528f),
        status: Good,
        is_optional: false,
    },
    Asset {
        kind: Rom,
        name: "mos320.cmos",
        size: Some(
            64,
        ),
        location: Paths {
            software_list_name: None,
            targets: [
                "bbcm",
            ],
        },
        asset_hash: CRC(c7f9e85a) SHA1(f24cc9db0525910689219f7204bf8b864033ee94),
        status: Good,
        is_optional: false,
    },
    Asset {
        kind: Sample,
        name: "motoroff.wav",
        size: None,
        location: Paths {
            software_list_name: None,
            targets: [
                "bbcm",
            ],
        },
        asset_hash: <<NONE>>,
        status: Good,
        is_optional: true,
    },
    Asset {
        kind: Sample,
        name: "motoron.wav",
        size: None,
        location: Paths {
            software_list_name: None,
            targets: [
                "bbcm",
            ],
        },
        asset_hash: <<NONE>>,
        status: Good,
        is_optional: true,
    },
    Asset {
        kind: Rom,
        name: "saa5050",
        size: Some(
            960,
        ),
        location: Paths {
            software_list_name: None,
            targets: [
                "saa5050",
                "bbcm",
            ],
        },
        asset_hash: CRC(201490f3) SHA1(6c8daba70374e5aa3a6402f24cdc5f8677d58a0f),
        status: Good,
        is_optional: false,
    },
    Asset {
        kind: ImageFile {
            device_type: Cartridge,
            use_absolute_path: false,
        },
        name: "Click_M128-1.00.rom",
        size: Some(
            16384,
        ),
        location: Paths {
            software_list_name: Some(
                "bbcm_cart",
            ),
            targets: [
                "click100",
            ],
        },
        asset_hash: CRC(8c633300) SHA1(e7223334fd5cb5b3ed715421aa278b96b3ea39af),
        status: Good,
        is_optional: false,
    },
]
